# bchat

./: CMakeLists.txt  README.md  conn.h  libuv.cc  parser.h  parser_test.cc  server.h  upload.py  user.h
client/: client.go  client.py
performance/: client.go  load.go  message.pb.go  tcpkali_test.sh
proto/: message.proto
src/: benchmark.cc  conn.cc  conn.h  conn_base.h  conn_base.tcc  main.cc  parser.h  parser_benchmark.cc  parser_test.cc  sender.cc  sender.h  server.h  server_base.h  test_util.h  user.cc  user.h  user_benchmark.cc  user_test.cc
src/chat/: main.cc  message_storage.h  message_storage_test.cc  server.h  server_context.h  user.cc  user.h  user_benchmark.cc  user_test.cc
src/performance/: tcpkali_test.sh
src/proto/: message.pb.cc  message.pb.h  message.proto  message_pb2.py
